[gd_scene load_steps=7 format=3 uid="uid://da7archive001"]

[ext_resource type="Script" path="res://scripts/case_07/da7_data_archive_a.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bc6epa3jyjbri" path="res://ui/theme_terminal_amber.tres" id="2_theme"]
[ext_resource type="AudioStream" path="res://audio/error.wav" id="3_error"]
[ext_resource type="AudioStream" path="res://audio/relay.wav" id="4_relay"]
[ext_resource type="AudioStream" path="res://audio/click.wav" id="5_click"]
[ext_resource type="PackedScene" path="res://scenes/ui/ResultStamp.tscn" id="6_stamp"]

[node name="DA7_DataArchiveQuestA" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="RootLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="PanelContainer" parent="RootLayout"]
layout_mode = 2
size_flags_vertical = 0
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="RootLayout/Header"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Title" type="RichTextLabel" parent="RootLayout/Header/Margin"]
layout_mode = 2
text = "ДЕЛО #7: СЕКРЕТНЫЙ АРХИВ"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Body" type="MarginContainer" parent="RootLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="DesktopLayout" type="HSplitContainer" parent="RootLayout/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 400

[node name="TableSection" type="VBoxContainer" parent="RootLayout/Body/DesktopLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TableTitle" type="Label" parent="RootLayout/Body/DesktopLayout/TableSection"]
layout_mode = 2
text = "РЕЖИМ ДАННЫХ // ТОЛЬКО ЧТЕНИЕ"

[node name="DataTree" type="Tree" parent="RootLayout/Body/DesktopLayout/TableSection"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
hide_root = true
select_mode = 1

[node name="InspectPanel" type="PanelContainer" parent="RootLayout/Body/DesktopLayout/TableSection"]
custom_minimum_size = Vector2(0, 108)
layout_mode = 2

[node name="InspectMargin" type="MarginContainer" parent="RootLayout/Body/DesktopLayout/TableSection/InspectPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="InspectVBox" type="VBoxContainer" parent="RootLayout/Body/DesktopLayout/TableSection/InspectPanel/InspectMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InspectLabel" type="RichTextLabel" parent="RootLayout/Body/DesktopLayout/TableSection/InspectPanel/InspectMargin/InspectVBox"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
fit_content = false
scroll_active = false
autowrap_mode = 2
text = "Выберите строку для проверки улики."

[node name="ScanLabel" type="Label" parent="RootLayout/Body/DesktopLayout/TableSection/InspectPanel/InspectMargin/InspectVBox"]
layout_mode = 2
text = "СКАН: 0"

[node name="TaskSection" type="VBoxContainer" parent="RootLayout/Body/DesktopLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DossierPanel" type="PanelContainer" parent="RootLayout/Body/DesktopLayout/TaskSection"]
layout_mode = 2

[node name="DossierMargin" type="MarginContainer" parent="RootLayout/Body/DesktopLayout/TaskSection/DossierPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="DossierVBox" type="VBoxContainer" parent="RootLayout/Body/DesktopLayout/TaskSection/DossierPanel/DossierMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CaseTitleLabel" type="Label" parent="RootLayout/Body/DesktopLayout/TaskSection/DossierPanel/DossierMargin/DossierVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ФАЙЛ: ACCESS_LOG_07"

[node name="BriefingLabel" type="RichTextLabel" parent="RootLayout/Body/DesktopLayout/TaskSection/DossierPanel/DossierMargin/DossierVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
fit_content = false
scroll_active = false
autowrap_mode = 2
text = "Брифинг..."

[node name="ObjectiveLabel" type="Label" parent="RootLayout/Body/DesktopLayout/TaskSection/DossierPanel/DossierMargin/DossierVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ЦЕЛЬ"

[node name="PromptLabel" type="RichTextLabel" parent="RootLayout/Body/DesktopLayout/TaskSection"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Загрузка параметров дела..."
fit_content = true

[node name="OptionsGrid" type="GridContainer" parent="RootLayout/Body/DesktopLayout/TaskSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="ExplainLine" type="RichTextLabel" parent="RootLayout/Body/DesktopLayout/TaskSection"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
fit_content = false
scroll_active = false
autowrap_mode = 2
text = ""

[node name="MobileLayout" type="VBoxContainer" parent="RootLayout/Body"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="RootLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="StabilityLabel" type="Label" parent="RootLayout/Footer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "СТАБИЛЬНОСТЬ: 100%"

[node name="StabilityBar" type="ProgressBar" parent="RootLayout/Footer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
value = 100.0

[node name="ResultStamp" parent="." instance=ExtResource("6_stamp")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Runtime" type="Node" parent="."]

[node name="Audio" type="Node" parent="Runtime"]

[node name="SfxClick" type="AudioStreamPlayer" parent="Runtime/Audio"]
stream = ExtResource("5_click")

[node name="SfxError" type="AudioStreamPlayer" parent="Runtime/Audio"]
stream = ExtResource("3_error")

[node name="SfxRelay" type="AudioStreamPlayer" parent="Runtime/Audio"]
stream = ExtResource("4_relay")

[node name="TypewriterTimer" type="Timer" parent="Runtime"]
one_shot = true
wait_time = 0.03

[node name="TelemetryTimer" type="Timer" parent="Runtime"]

